tests/sema/negative/struct_param_unknown_type.nv
fn f(p: Point) : void {
    return;
}

fn main() : void {
    return;
}
